# ROSProxy

./: .gitignore  CMakeLists.txt  README.md
launch/: pgr_camera.launch
src/Components/: CMakeLists.txt
src/Components/CameraSubscriber/: CameraSubscriber.cpp  CameraSubscriber.hpp
src/Components/Float32MultiArrayProxy/: CMakeLists.txt  Float32MultiArrayProxy.cpp  Float32MultiArrayProxy.hpp
src/Components/Float32MultiArrayProxy2/: CMakeLists.txt  Float32MultiArrayProxy2.cpp  Float32MultiArrayProxy2.hpp
src/Components/FloatProxy/: CMakeLists.txt  FloatProxy.cpp  FloatProxy.hpp
src/Components/StringProxy/: CMakeLists.txt  StringProxy.cpp  StringProxy.hpp
tasks/: CameraViewer.xml  Float32MultiArrayProxy.xml  FloatProxy.xml
